--- a/createAccount.html
+++ b/createAccount.html
@@ -47,6 +47,9 @@
 
             <hr class="my-4">
             <a class="btn btn-primary btn-lg btn-block" href="blank.html" role="button">Create Account</a>
+            <span>Already have account?</span><a href="login.html">
+                <button id="create_account_button" type="button" class="btn btn-link" data-container="body">Log In</button>
+            </a>
 
 
 
