--- a/login.html
+++ b/login.html
@@ -35,11 +35,11 @@
                 Password
             </label>
             <div class="input-group">
-                <input type="Password" pattern=".{8,16}" required title="8-16" class="form-control" placeholder="Password">
+                <input type="Password" pattern=".{8,16}" tabindex="2" required title="8-16" class="form-control" placeholder="Password">
 
             </div>
 
-            <label><input type="checkbox" value="true" tabindex="4"><i class="a-icon a-icon-checkbox"></i>
+            <label><input type="checkbox" value="true" tabindex="3"><i class="a-icon a-icon-checkbox"></i>
                 <span>
                     Keep me signed in.
                 <span>
@@ -49,7 +49,7 @@
 
             <hr class="my-4">
             <a class="btn btn-primary btn-lg btn-block" href="blank.html" role="button">Log In</a>
-            <a href="createAccount.html">
+            <span>Don't have account?</span><a href="createAccount.html">
               <button id="create_account_button" type="button" class="btn btn-link" data-container="body">Create Account</button>
             </a>
         </div>
