--- a/index.html
+++ b/index.html
@@ -334,6 +334,19 @@
                 </div>
               </div>
               <div class="form-group row">
+                  <div class="col-sm-3">Memo</div>
+                  <div class="col-sm-9">
+                    <input
+                      type="text"
+                      class="form-control buget-radius"
+                      id="validationCustom01"
+                      placeholder="Say something!"
+                      value=""
+                      required
+                    />
+                  </div>
+                </div>
+              <div class="form-group row">
                 <div class="col-sm-3">Cost</div>
                 <div class="col-sm-9">
                   <input
@@ -487,6 +500,19 @@
                     </div>
                   </div>
                 </div>
+                <div class="form-group row">
+                    <div class="col-sm-3">Memo</div>
+                    <div class="col-sm-9">
+                      <input
+                        type="text"
+                        class="form-control buget-radius"
+                        id="validationCustom01"
+                        placeholder="Say something!"
+                        value=""
+                        required
+                      />
+                    </div>
+                  </div>
                 <div class="form-group row">
                   <div class="col-sm-3">Cost</div>
                   <div class="col-sm-9">
