--- a/login.html
+++ b/login.html
@@ -40,15 +40,15 @@
             </div>
 
             <label><input type="checkbox" value="true" tabindex="3"><i class="a-icon a-icon-checkbox"></i>
-                <span>
+                <span class="term">
                     Keep me signed in.
                 <span>
-            <button type="button" class="btn btn-link" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="top" title="Details" data-content="Don't check this on a public computer">Details</button>
+            <button type="button" class="btn btn-link term" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="top" title="Details" data-content="Don't check this on a public computer">Details</button>
           </span>
         </span></label>
 
             <hr class="my-4">
-            <a class="btn btn-primary btn-lg btn-block" href="blank.html" role="button">Log In</a>
+            <a class="btn login-btn btn-lg btn-block" href="index.html" role="button">Log In</a>
             <span>Don't have account?</span><a href="createAccount.html">
               <button id="create_account_button" type="button" class="btn btn-link" data-container="body">Create Account</button>
             </a>
