--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#"
+            <a class="nav-link" href="index.html"
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Budget</a>
+            <a class="nav-link" href="budget.html">Budget</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Report</a>
