--- a/createAccount.html
+++ b/createAccount.html
@@ -12,7 +12,7 @@
             crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/login.css"/>
-    <title>Login</title>
+    <title>Create Account</title>
 </head>
 <body>
 
@@ -25,7 +25,7 @@
             <h1 class="signin">Create Account</h1>
 
             <label class="email">
-                Your aame
+                Your name
             </label>
             <div class="input-group">
                 <input   tabindex="1"  required class="form-control">
@@ -60,8 +60,8 @@
 
             <hr class="my-4">
             <a class="btn login-btn btn-lg btn-block " href="index.html" role="button">Create Account</a>
-            <span>Already have account?</span><a href="login.html">
-                <button id="create_account_button" type="button" class="btn btn-link" data-container="body">Log In</button>
+            <span>Already have account?</span>
+            <a href="login.html" id="create_account_button" class="link-color link-margin" data-container="body">Log In
             </a>
 
 
