--- a/login.html
+++ b/login.html
@@ -43,14 +43,13 @@
                 <span class="term">
                     Keep me signed in.
                 <span>
-            <button type="button" class="btn btn-link term" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="top" title="Details" data-content="Don't check this on a public computer">Details</button>
+            <button type="button" class="btn btn-link term link-color" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="top" title="Details" data-content="Don't check this on a public computer">Details</button>
           </span>
         </span></label>
 
             <hr class="my-4">
             <a class="btn login-btn btn-lg btn-block" href="index.html" role="button">Log In</a>
-            <span>Don't have account?</span><a href="createAccount.html">
-              <button id="create_account_button" type="button" class="btn btn-link" data-container="body">Create Account</button>
+            <span>Don't have account?</span><a href="createAccount.html" id="create_account_button"  class="link-color link-margin" data-container="body">Create Account
             </a>
         </div>
     </div>
