--- a/budget.html
+++ b/budget.html
@@ -47,7 +47,7 @@
                 <a class="nav-link" href="budget.html">Budget</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Report</a>
+                <a class="nav-link" href="report.html">Report</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="account.html">Account</a>
