--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <a class="nav-link" href="budget.html">Budget</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Report</a>
+            <a class="nav-link" href="report.html">Report</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="account.html">Account</a>
@@ -116,7 +116,7 @@
                         </h6>
                       </li>
                       <li>
-                        <a href="account.html" class="add-another-ba" 
+                        <a href="account.html" class="add-another-ba"
                           >+ Link another bank account</a
                         >
                       </li>
@@ -134,7 +134,7 @@
                     </div>
                     <ul class="bank-list">
                       <li>
-                        <a href="account.html" class="add-another-ba" 
+                        <a href="account.html" class="add-another-ba"
                           >+ Link another bank account</a
                         >
                       </li>
@@ -770,6 +770,6 @@
         });
       });
     </script>
-    
+
   </body>
 </html>
